# Aeostara-Mac-iOS

./: .gitignore  AEOSTARA_BASELINE_REFERENCE.md  BRANCH_ISOLATION.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  MIGRATION_PROVENANCE.md  PHASE_5_CLOSEOUT.md  PLATFORM_STATUS_MATRIX.md  Package.swift  README.md  aeostara-conformance-policy.json  agentic-coding-policy.json  vcpkg.json
.github/scripts/: parse-headers.py
.github/workflows/: ai-attribution-guard.yml  attribution-integrity.yml  compliance-audit.yml  downstream-conformance.yml  ios-build-test.yml  ios-build.yml  macos-build-test.yml  macos-build.yml  repository-integrity.yml  schema-validator.yml  version-labeler.yml  version-tracker.yml  wiki-sync.yml  workflow-integrity.yml
Aeostara.xcodeproj/: project.pbxproj
AeostaraTests/: AeostaraBridgeTests.mm  CMakeLists.txt
AeostaraUITests/: AeostaraUITests.swift  Info.plist
Scripts/: check-architecture.ps1  check-architecture.sh  verify-aeostara-guardrails.ps1
Sources/AeostaraApp/: AeostaraApp.swift  AeostaraViewModel.swift  ContentView.swift
Sources/AeostaraDomain/: AeostaraError.swift  AuditTrail.swift  DriftAnalyzer.swift  InvariantParser.swift  JsonPath.swift  RollbackManager.swift  Verification.swift
Sources/AeostaraMacCLI/: CLIRunner.swift  CommandParser.swift  Main.swift
Sources/AeostaraMacDomain/: AnyCodable.swift  BackupManager.swift  Contracts.swift  HealingEngine.swift  PolicyEvaluator.swift  Protocols.swift  RepairPlanner.swift  Verification.swift
Sources/AeostaraMacServices/: DefaultFileSystem.swift  JsonConfigAdapter.swift
Sources/AeostaraServices/: DocumentImporter.swift  JsonConfigAdapter.swift  SandboxFileSystem.swift
Tests/AeostaraMacTests/: AcceptanceTests.swift  AuditTrailTests.swift  BackupRollbackTests.swift  ContractsTests.swift  DriftAnalyzerTests.swift  HealingEngineTests.swift  JsonPathTests.swift  PolicyEvaluatorTests.swift  RepairPlannerTests.swift  TestHelpers.swift  VerificationTests.swift
Tests/AeostaraTests/: AcceptanceTests.swift  AuditTrailTests.swift  BackupRollbackTests.swift  ContractsTests.swift  DriftAnalyzerTests.swift  HealingEngineTests.swift  JsonPathTests.swift  PolicyEvaluatorTests.swift  RepairPlannerTests.swift  TestHelpers.swift  VerificationTests.swift
_quarantine/: CMakeLists.txt  README.md  tests_CMakeLists.txt
_quarantine/AeostaraApp_old/: AeostaraViewModel.swift
_quarantine/AeostaraCLI_src/: CMakeLists.txt
_quarantine/AeostaraCore/: CMakeLists.txt
_quarantine/AeostaraCore/src/: AuditTrail.cpp  BackupManager.cpp
_quarantine/CLISmokeTests/: smoke_test.sh
_quarantine/Scripts/: check-architecture.sh
ci/: acceptance_runner.py  compliance_checker.py  validate_schemas.py
platform/ios/: PLATFORM_MANIFEST.json  README.md
platform/macos/: ForsettiBridge.h  PLATFORM_MANIFEST.json  README.md
specs/acceptance/: acceptance_targets.md  compliance_checklist.md
specs/algorithms/: audit.pseudo.md  backup.pseudo.md  drift_analysis.pseudo.md  healing_flow.pseudo.md  json_path.pseudo.md  policy_evaluation.pseudo.md  repair_planning.pseudo.md  rollback.pseudo.md  verification.pseudo.md
specs/architecture/: branching_strategy.md  compliance_rules.md  native_target_architecture.md  product_boundaries.md
specs/contracts/: AuditEvent.schema.json  DesiredState.schema.json  DriftEvent.schema.json  EncodedState.schema.json  Invariant.schema.json  ModuleManifest.schema.json  ObservedState.schema.json  RepairAction.schema.json  RepairPlan.schema.json  RollbackPlan.schema.json  VerificationResult.schema.json
specs/interfaces/: IAuditSink.pseudo.md  IBackupProvider.pseudo.md  IConfigAdapter.pseudo.md  IFileSystem.pseudo.md  IHealingEngine.pseudo.md
src/AeostaraCore/: CMakeLists.txt
tests/AeostaraCoreTests/: CoreTests.cpp
(+9 files in other folders)
